--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         h1,
         h2 {
             color: #333;
+            text-align: center;
         }
 
         .maincharacter {
@@ -88,7 +89,7 @@
         label {
             display: flex;
             align-items: center;
-            justify-content: flex-start;
+            justify-content:end;
             gap: 12px;
             color: #3333336f;
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -142,7 +143,7 @@
 </head>
 
 <body>
-    <h1>Interactive Script (Demo) | by Rami</h1>
+    <h1>Interactive Script | by Rami (Demo)</h1>
 
     <label> Data
         <textarea id="scriptInput" required dropzone="true" translate="no"
