fix: final part's title

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                     document.querySelector('.play-container').appendChild(notesContainer);
 
                     const notesContainerTitle = document.createElement('h2')
-                    notesContainerTitle.innerText = 'NOTES';
+                    notesContainerTitle.innerText = 'FINAL NOTES';
                     notesContainer.appendChild(notesContainerTitle);
 
                     const notesContent = document.createElement('div')
