--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 <body>
     <h1>Interactive Script | by Rami (Demo)</h1>
 
-    <label> Data
+    <label aria-hidden="true"> Data
         <textarea id="scriptInput" required dropzone="true" translate="no"
             onchange="this.value && reCreateScriptContent(JSON.stringify(JSON.parse(this.value)))"
             oninput="this.onchange()" title="Secret or script data"></textarea>
