--- a/index.html
+++ b/index.html
@@ -126,19 +126,29 @@
             opacity: 0.8;
         }
 
+        button {
+            padding: 4px 8px;
+            border-radius: 5px;
+            background-image: radial-gradient(#eee 0%, #fff 10%, #eee 50%, #ddd 90%, #bbb 99%);
+            display: inline-block;
+            box-shadow: 1px 1px 2px;
+            cursor: pointer;
+        }
+
         textarea {
             font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            width: 40vw;
-            height: 4em;
+            width: 20vw;
+            height: 2em;
             background: none;
             font-size: small;
             border: 1px dashed #050;
             color: transparent;
             border-radius: 3px;
-            opacity: 0.4;
+            opacity: 0.3;
+            transition: all 0.5s;
         }
 
-        textarea:focus {
+        textarea:focus{
             width: 60vw;
             height: 8em;
             size: 300;
@@ -198,12 +208,16 @@
             onchange="readJSONInputFile(this.files[0], text => {const scriptInput = document.getElementById('scriptInput'); scriptInput.value = text; scriptInput.onchange();} );"
             hidden>
         <button onclick="document.getElementById('fileInput').click()">Load</button>
-        <!-- <button onclick="localStorage.removeItem('scriptObject'); location.reload()">Reset</button> -->
-        <button
-            onclick="document.getElementById('scriptInput').value = JSON.stringify(script); document.getElementById('scriptInput').focus()">Edit</button>
+        <!-- <button onclick="localStorage.clear();
+        document.getElementById('scriptInput').value = '';
+        location.reload();
+        ">Reset</button> -->
+        <!-- <button
+            onclick="document.getElementById('scriptInput').value = JSON.stringify(script); document.getElementById('scriptInput').focus()">Edit</button> -->
         <textarea id="scriptInput" required dropzone="true" translate="no"
             onchange="this.value && reCreateScriptContent(JSON.stringify(JSON.parse(this.value)))"
-            oninput="this.onchange()" title="Secret or script data"></textarea>
+            oninput="this.onchange()" title="Secret or script data"
+            ></textarea>
 
     </label>
     <h2 id="title">Title</h2>
@@ -411,10 +425,9 @@
                 textAreaInput = document.getElementById('scriptInput');
                 textAreaInputValue = textAreaInput.value;
                 if (!textAreaInputValue) {
-                    secret = prompt("Welcome to the Interactive Script Web App (Demo)!\n Paste the SECRET script data HERE! \n(or just skip. no pressure...)\n");
-                    if (secret)
-                        textAreaInput.value = secret;
-                    textAreaInput.onchange();
+                    window.alert("Welcome to the Interactive Script Web App (Demo)!\n\n If we sent you an .iscript file, then you can activate it by clicking the Data 'Load' button.\n\n(or not. no pressure...)\n");
+                    document.getElementById('fileInput').click();
+                    document.querySelector('button').click();
                 }
             }
         }
