Edit: Button Styles

--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
             display: inline-block;
             box-shadow: 1px 1px 2px;
             cursor: pointer;
+            min-width: 56px;
+            opacity: 0.7;
         }
 
         textarea {
